--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.4",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -29,6 +30,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
