--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.1.9",
     "jodit-react": "^4.1.2",
     "jsonwebtoken": "^9.0.2",
